# social-media-auto-pilot

./: .env.example  .gitignore  README.md  pyproject.toml
ai/: factory.py  interfaces.py
ai/providers/: mock_provider.py  ollama_provider.py  openai_provider.py
cli/: app.py
cli/commands/: analyze.py  collect.py  learn.py  produce.py  publish.py  review.py  topic.py  workflow.py
config/: settings.yaml
config/review_rules/: compliance_rules.yaml  default_rules.yaml
core/: config.py  database.py  logging.py
core/event_bus/: bus.py  events.py
core/scheduler/: cron.py
core/workflow/: engine.py  models.py
data/: schema.sql
docs/: ARCHITECTURE_OVERVIEW.md  DEBUGGING_GUIDE.md  INDEX.md  INFRASTRUCTURE.md  INTERFACE_CONTRACT.md
docs/config-reference/: compliance_rules_reference.md  default_rules_reference.md  settings_reference.md
docs/data-flow/: FLOW_01_素材采集闭环.md  FLOW_02_内容生产闭环.md  FLOW_03_审阅分发闭环.md  FLOW_04_数据分析闭环.md  FLOW_05_自学习闭环.md
docs/modules/: M-01_关键词智能扩展.md  M-02_图文素材采集.md  M-03_视频素材采集.md  M-04_参考文案与竞品采集.md  M-05_素材去重与质量控制.md  M-06_素材入库与版权追踪.md  M-07_素材匹配与调用.md  M-08_文案差异化生成.md  M-09_封面图生成.md  M-10_视频初剪.md  M-11_内容精加工与定稿.md  M-12_合规性自检.md  M-13_分级审阅引擎.md  M-14_版本变更管理.md  M-15_通用素材池管理.md  M-16_多平台分发.md  M-17_发布状态监控与应急响应.md  M-18_效果数据采集.md  M-19_账号健康度监控.md  M-20_数据清洗与聚合.md  M-21_多维度效果分析.md  M-22_评论区语义挖掘与隐私脱敏.md  M-23_跨平台热点追踪.md  M-24_下期计划草案生成.md  M-25_学习数据收集.md  M-26_偏好提炼与规则生成.md  M-27_规则时效性管理.md  M-28_初始偏好模板导入.md  M-29_学习成果应用.md  M-30_学习成效量化与报告.md
scripts/: init_db.py
storage/: interfaces.py  local_store.py  utils.py
(+11 files in other folders)
