[project]
name = "autosoc"
version = "0.1.0"
description = "社交媒体自动化运营系统 — 人机协同、自学习驱动的多平台内容运营闭环"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
    "playwright>=1.45.0",
    "pillow>=10.2.0",
    "moviepy>=1.0.3",
    "pydub>=0.25.1",
    "requests>=2.31.0",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
ai = [
    "openai>=1.12.0",
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["autosoc*"]

[project.scripts]
autosoc = "autosoc.cli.app:entry"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
