[project]
name = "social-media-auto-pilot"
version = "0.1.0"
description = "社交媒体自动化运营系统 — 人机协同、渐进式自动化的内容运营闭环"
requires-python = ">=3.11"
authors = [{name = "Auto-Pilot Team"}]

[project.scripts]
smap = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
